Fixing some mobile spacing with no Font + Responsive Nav Bar background ;^)
next up, email copy on click + toast interaction? ( or is that over board ? )

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,6 @@ code {
 }
 h1,
 h2,
-p,
 ul,
 li {
   font-style: bold;
@@ -82,7 +81,6 @@ p label {
   color: #eaf5fa;
   text-shadow: #9cbbd0 0px 3px 1px;
   font-weight: 700;
-  letter-spacing: 0.1em;
 }
 
 .white1 a {
@@ -175,9 +173,14 @@ ul.header {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 60px;
+  -webkit-transition: ease 1s; /* For Safari 3.0 to 6.0 */
+  transition: ease 1s; /* For modern browsers */
+}
+
+.visiblenav{
   background-color: rgba(73, 97, 125, 0.5);
   background-blend-mode: screen;
-  height: 60px;
 }
 
 .top2 {
@@ -334,6 +337,7 @@ li {
 }
 
 .section span {
+  text-decoration: none !important;
   color: rgb(232, 246, 255) !important;
   font: bold !important;
   font-weight: bolder;
@@ -592,7 +596,7 @@ li {
   }
 
   .react.hvr-sweep-to-right:before {
-    background: rgb(213, 196, 152) url("./card/react-logo.png") no-repeat center
+    background: rgb(12, 24, 53) url("./card/react-logo.png") no-repeat center
       center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
